[DaisySeed]Add a program which plays all the notes (the range). Manage the attack and release time.

--- a/daisy_seed/play_notes/Makefile
+++ b/daisy_seed/play_notes/Makefile
@@ -1,12 +1,15 @@
 # Project Name
-TARGET = key_controlled_ocillators
+TARGET = play_notes
 
 # Sources
-CPP_SOURCES = key_controlled_ocillators.cpp
+CPP_SOURCES = play_notes.cpp
 
 # Library Locations
 LIBDAISY_DIR = ../../../daisy_seed/libDaisy/
 DAISYSP_DIR = ../../../daisy_seed/DaisySP/
+
+# Includes FatFS source files within project.
+USE_FATFS = 1
 
 # Core location, and generic Makefile.
 SYSTEM_FILES_DIR = $(LIBDAISY_DIR)/core
