--- a/daisy_seed/play_notes_from_arduino/.vscode/settings.json
+++ b/daisy_seed/play_notes_from_arduino/.vscode/settings.json
@@ -6,6 +6,7 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "regex": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "functional": "cpp"
     }
 }
