Move the code to play midi files in a dedicated module

--- a/daisy_seed/play_notes_from_arduino/Makefile
+++ b/daisy_seed/play_notes_from_arduino/Makefile
@@ -2,7 +2,7 @@
 TARGET = play_notes_from_arduino
 
 # Sources
-CPP_SOURCES = play_notes_from_arduino.cpp
+CPP_SOURCES = play_notes_from_arduino.cpp common.cpp play_midi_files.cpp
 
 # Library Locations
 LIBDAISY_DIR = ../../../daisy_seed/libDaisy/
